--- a/src/main/resources/templates/kanban/hl_area.html
+++ b/src/main/resources/templates/kanban/hl_area.html
@@ -52,7 +52,7 @@
 
     <div class="data_main">
         <div class="main_left fl">
-            <div class="left_1 t_btn6" style="cursor: pointer;height:285px;">
+            <div class="left_1 t_btn6" style="cursor: pointer;height:360px;">
                 <!--左上边框-->
                 <div class="t_line_box">
                     <i class="t_l_line"></i> 
@@ -77,9 +77,9 @@
                     <img src="picture/t_1.png" alt="">
                     产能预警
                 </div>
-                <div  id="pro_warn" class="chart" style="width:100%;height: 280px;"></div>
+                <div  id="pro_warn" class="chart" style="width:100%;height: 360px;"></div>
             </div>
-            <div class="left_2 " style="cursor: pointer;height:195px;margin-bottom:20px;">
+            <div class="left_2 " style="cursor: pointer;height:270px;margin-bottom:20px;">
                 <div class="t_line_box">
                     <i class="t_l_line"></i> 
                     <i class="l_t_line"></i> 
@@ -97,27 +97,27 @@
                     <i class="b_r_line"></i> 
                 </div> 
                 <div class="main_title">
-                    <img src="picture/t_5.png" alt=""><span style="color:red;">异常报警</span>
+                    <img src="picture/t_5.png" alt=""><span style="color:red;font-family:SimHei">异常报警</span>
                 </div>
                 <div class="main_table t_btn8">
                     <table>
                         <thead>
                         <tr>
-                            <th>质量</th>
-                            <th>设备</th>
+                            <th style="font-family:SimHei">质量</th>
+                            <th style="font-family:SimHei">设备</th>
                         </tr>
                         </thead>
                         <tbody>
                       
                         <tr style="height:40px;">
-                            <td style="width:50%"><span id="yc_zl"></span></td>
-                            <td td style="width:50%"><span id="yc_sb"></span></td>
+                            <td style="width:50%"><span id="yc_zl"  style="font-family:SimHei"></span></td>
+                            <td td style="width:50%"><span id="yc_sb"  style="font-family:SimHei"></span></td>
                         </tr>
                         </tbody>
                     </table>
                 </div>
             </div>
-            <div class="left_3" style="cursor: pointer;height:230px;">
+            <div class="left_3" style="cursor: pointer;height:380px;">
                 <div class="t_line_box">
                     <i class="t_l_line"></i> 
                     <i class="l_t_line"></i> 
@@ -164,7 +164,7 @@
             </div>
         </div>
         <div class="main_center fl">
-            <div class="center_text" style="position: relative;height:500px;">
+            <div class="center_text" style="position: relative;height:650px;">
                 <!--左上边框-->
                 <div class="t_line_box">
                     <i class="t_l_line"></i> 
@@ -218,12 +218,12 @@
                 <!-- 法 -end-->
                 <!-- 环 -start-->
                 <div class="chart_main div_none"  id="div_li_huan">
-                    <img id="div_li_huan_img" src="" style="width:100%;height: 498px;padding:10px;padding-top:20px;">
+                    <img id="div_li_huan_img" src="" style="width:100%;height: 648px;padding:10px;padding-top:20px;">
                 </div>
                 <!-- 环  -end-->
-                <div class="chart_main " style="width:666px;height: 500px;margin:10px;color:#fff" id="div_li_ce">3</div>
+                <div class="chart_main " style="width:666px;height: 650px;margin:10px;color:#fff" id="div_li_ce">3</div>
             </div>
-            <div class="center_text1" style="position: relative;width:1095px;">
+            <div class="center_text1" style="position: relative;width:1595px;height:380px;">
                 <!--左上边框-->
                 <div class="t_line_box">
                     <i class="t_l_line"></i> 
@@ -244,7 +244,7 @@
                     <i class="r_b_line"></i> 
                     <i class="b_r_line"></i> 
                 </div> 
-                <div class="main_title" style="width: 230px;">
+                <div class="main_title" style="width: 380px;">
                     <img src="picture/t_4.png" alt="">
                      <div class="main_title_text">
                        <ul class="ul2">
@@ -316,7 +316,7 @@
             </div>
         </div>
         <div class="main_right fr">
-            <div class="right_1" style="height:500px">
+            <div class="right_1" style="height:650px">
                 <!--左上边框-->
                 <div class="t_line_box">
                     <i class="t_l_line"></i> 
