--- a/src/main/resources/templates/kanban/hl_workshop.html
+++ b/src/main/resources/templates/kanban/hl_workshop.html
@@ -71,9 +71,11 @@
 					<div class="t_line_box">
 						<i class="r_b_line"></i> <i class="b_r_line"></i>
 					</div>
-					<div class="main_title">
+					<!--标题-->
+					<!-- <div class="main_title">
 						<img src="picture/t_1.png" alt=""> 产能预警
-					</div>
+					</div> -->
+					<!--内容-->
 					<div id="pro_warn" class="chart"
 						style="width: 100%; height: 260px;"></div>
 				</div>
