lst-车间看板调整

--- a/src/main/resources/templates/kanban/hl_workshop.html
+++ b/src/main/resources/templates/kanban/hl_workshop.html
@@ -80,7 +80,7 @@
 						style="width: 100%; height: 260px;"></div>
 				</div>
 				<div class="left_2 "
-					style="cursor: pointer; height: 120px; margin-bottom: 20px;">
+					style="cursor: pointer; height: 370px; margin-bottom: 20px;">
 					<div class="t_line_box">
 						<i class="t_l_line"></i> <i class="l_t_line"></i>
 					</div>
@@ -93,11 +93,11 @@
 					<div class="t_line_box">
 						<i class="r_b_line"></i> <i class="b_r_line"></i>
 					</div>
-					<div class="main_title">
+					<!--<div class="main_title">
 						<img src="picture/t_5.png" alt=""><span style="color: red;">异常报警</span>
-					</div>
+					</div>  -->
 					<div class="main_table t_btn8">
-						<table>
+						<!-- <table>
 							<thead>
 								<tr>
 									<th>质量</th>
@@ -105,58 +105,13 @@
 								</tr>
 							</thead>
 							<tbody>
-
 								<tr style="height: 40px;">
 									<td style="width: 50%"><span id="yc_zl"></span></td>
 									<td td style="width: 50%"><span id="yc_sb"></span></td>
 								</tr>
 							</tbody>
-						</table>
+						</table> -->
 					</div>
-				</div>
-				<div class="left_3" style="cursor: pointer; height: 230px;">
-					<div class="t_line_box">
-						<i class="t_l_line"></i> <i class="l_t_line"></i>
-					</div>
-					<div class="t_line_box">
-						<i class="t_r_line"></i> <i class="r_t_line"></i>
-					</div>
-					<div class="t_line_box">
-						<i class="l_b_line"></i> <i class="b_l_line"></i>
-					</div>
-					<div class="t_line_box">
-						<i class="r_b_line"></i> <i class="b_r_line"></i>
-					</div>
-					<div class="main_title">
-						<img src="picture/t_9.png" alt="" style="width: 18px;">负责人
-					</div>
-					<div class="main_table t_btn8">
-						<table>
-							<thead>
-								<tr>
-									<th>车间负责人</th>
-									<th>生产负责人</th>
-									<th>质量负责人</th>
-								</tr>
-							</thead>
-							<tbody>
-								<tr>
-									<th><img id="jl_img" src="../images/portrait.png"
-										class="img-glz" alt=""></th>
-									<th><img id="zz_img" src="../images/portrait.png"
-										class="img-glz" alt=""></th>
-									<th><img id="zjy_img" src="../images/portrait.png"
-										class="img-glz" alt=""></th>
-								</tr>
-								<tr>
-									<th id="jl_name"></th>
-									<th id="zz_name"></th>
-									<th id="zjy_name"></th>
-								</tr>
-							</tbody>
-						</table>
-					</div>
-					<!-- <div id="chart_2" class="chart t_btn9" style="width:100%;height: 280px;"></div> -->
 				</div>
 			</div>
 			<div class="main_center fl">
@@ -177,48 +132,13 @@
 					<div class="t_line_box">
 						<i class="r_b_line"></i> <i class="b_r_line"></i>
 					</div>
-					<div class="main_title" style="width: 230px;">
-						<img src="picture/t_4.png" alt="">
-						<div class="main_title_text">
-							<ul class="ul1">
-								<li class="bg" id="li_fa">法</li>
-								<li></li>
-								<li class="bg" id="li_huan">环</li>
-								<li></li>
-								<li class="active" id="li_ce">测</li>
-								<li></li>
-							</ul>
-						</div>
-					</div>
-					<!-- 法 -start-->
-					<div class="chart_main div_none" id="div_li_fa">
-						<!-- <img id="div_li_fa_img" src="" style="width:100%;height: 348px;padding:10px;padding-top:20px;"> -->
-						<div class="main_table t_btn8">
-							<table>
-								<thead>
-									<tr>
-										<th>工序顺序号</th>
-										<th>工序名称</th>
-										<th>工艺描述</th>
-									</tr>
-								</thead>
-								<tbody id="fa">
-								</tbody>
-							</table>
-						</div>
-					</div>
-					<!-- 法 -end-->
-					<!-- 环 -start-->
+					
 					<div class="chart_main div_none" id="div_li_huan">
 						<img id="div_li_huan_img" src=""
 							style="width: 100%; height: 348px; padding: 10px; padding-top: 20px;">
-					</div>
-					<!-- 环  -end-->
-					<div class="chart_main "
-						style="width: 666px; height: 350px; margin: 10px; color: #fff"
-						id="div_li_ce">3</div>
+					</div>			
 				</div>
-				<div class="center_text1" style="position: relative; width: 1095px;">
+				<div class="center_text1" style="position: relative;">
 					<!--左上边框-->
 					<div class="t_line_box">
 						<i class="t_l_line"></i> <i class="l_t_line"></i>
@@ -234,83 +154,18 @@
 					<!--右下边框-->
 					<div class="t_line_box">
 						<i class="r_b_line"></i> <i class="b_r_line"></i>
-					</div>
-					<div class="main_title" style="width: 230px;">
-						<img src="picture/t_4.png" alt="">
-						<div class="main_title_text">
-							<ul class="ul2">
-								<li id="li_ren" class="active">人</li>
-								<li></li>
-								<li id="li_ji" class="">机</li>
-								<li></li>
-								<li id="li_liao" class="">料</li>
-								<li></li>
-							</ul>
-						</div>
-
-					</div>
-					<!--人 -start-->
-					<div class="" id="div_li_ren">
-						<div class="main_table t_btn8">
-							<table>
-								<thead>
-									<tr id="ren_head">
-										<!-- <td><span class="speed-line"><span class="speed-num" style="background-color: rgb(24, 100, 227); width: 70%;"></span><span class="numText">70%</span></span></td> -->
-									</tr>
-								</thead>
-								<tbody id="ren">
-								</tbody>
-							</table>
-						</div>
-					</div>
-					<!--人 -end-->
-					<!--机 -start-->
-					<div id="div_li_ji" class="div_none">
-						<!-- <i class="iconfont icon-xianweijing" style="color:green;font-size:20px;"></i>  -->
-						<div class="main_table">
-							<table>
-								<thead>
-									<tr>
-										<th><span class="green-legend">开机</span><span
-											style="color: #fff">开机</span></th>
-										<th><span class="red-legend">故障</span><span
-											style="color: #fff">故障</span></th>
-										<th><span class="yellow-legend">待机</span><span
-											style="color: #fff">待机</span></th>
-									</tr>
-								</thead>
-								<tbody id="ji">
-								</tbody>
-							</table>
-						</div>
-					</div>
-					<!--机 -end-->
+					</div>	
 					<!--料 -start-->
 					<div class="div_none" id="div_li_liao">
 						<div class="main_table t_btn8">
-							<table>
-								<thead>
-									<tr>
-										<th>物料编号</th>
-										<th>物料名称</th>
-										<th>领料数量</th>
-										<th>需领用量</th>
-										<th>退料数量</th>
-										<th>已领用量</th>
-										<th>未领用量</th>
-										<th>单位</th>
-									</tr>
-								</thead>
-								<tbody id="liao">
-								</tbody>
-							</table>
+						
 						</div>
 					</div>
 					<!--料-end -->
 				</div>
 			</div>
 			<div class="main_right fr">
-				<div class="right_1" style="height: 350px">
+				<div class="right_1" style="height: 260px">
 					<!--左上边框-->
 					<div class="t_line_box">
 						<i class="t_l_line"></i> <i class="l_t_line"></i>
@@ -327,74 +182,34 @@
 					<div class="t_line_box">
 						<i class="r_b_line"></i> <i class="b_r_line"></i>
 					</div>
-					<div class="main_title" style="width: 220px;">
-						<img src="picture/t_4.png" alt="">生产任务信息
-					</div>
+					
 					<div class="table-bordered-div">
-						<div
-							style="width: 100%; text-align: center; color: #fff; margin-bottom: 5px;">
-							<span>在制工单</span>
-						</div>
-						<table class="table-bordered">
-							<tbody>
-								<tr>
-									<td style="width: 25%"></td>
-									<td style="width: 25%"></td>
-									<td style="width: 25%"></td>
-									<td style="width: 25%"></td>
-								</tr>
-								<tr>
-									<td>工单号</td>
-									<td id="task_no" colspan="3"></td>
-								</tr>
-								<tr>
-									<td>产品编码</td>
-									<td id="xh"></td>
-									<td>截止时间</td>
-									<td id="jzsj"></td>
-								</tr>
-								<tr>
-									<td>产品名称</td>
-									<td id="cpmc" colspan="3"></td>
-								</tr>
-								<tr>
-									<td>任务数</td>
-									<td id="rws"></td>
-									<td>状态</td>
-									<td id="zt"></td>
-								</tr>
-								<tr>
-									<td>投料数</td>
-									<td id="tlsl"></td>
-									<td>入库数</td>
-									<td id="rks"></td>
-								</tr>
-								<tr>
-									<td>完工数</td>
-									<td id="ywcsl"></td>
-									<td>不合格数</td>
-									<td id="bhgs"></td>
-								</tr>
-							</tbody>
-						</table>
-						<div
-							style="width: 100%; text-align: center; color: #fff; margin-bottom: 5px;">
-							<span>待下发工单</span>
-						</div>
-						<table class="table-bordered table-line">
-							<thead>
-								<tr>
-									<th>工单号</th>
-									<th>产品</th>
-									<th>数量</th>
-								</tr>
-							</thead>
-							<tbody id="unTask">
-							</tbody>
-						</table>
+												
 					</div>
-
 				</div>
+				<div class="right_1" style="height: 320px">
+					<!--左上边框-->
+					<div class="t_line_box">
+						<i class="t_l_line"></i> <i class="l_t_line"></i>
+					</div>
+					<!--右上边框-->
+					<div class="t_line_box">
+						<i class="t_r_line"></i> <i class="r_t_line"></i>
+					</div>
+					<!--左下边框-->
+					<div class="t_line_box">
+						<i class="l_b_line"></i> <i class="b_l_line"></i>
+					</div>
+					<!--右下边框-->
+					<div class="t_line_box">
+						<i class="r_b_line"></i> <i class="b_r_line"></i>
+					</div>
+					
+					<div class="table-bordered-div">
+												
+					</div>
+				</div>
+				
 			</div>
 
 
