--- a/src/main/resources/static/kanban/css/workshop_index.css
+++ b/src/main/resources/static/kanban/css/workshop_index.css
@@ -157,7 +157,7 @@
 
 
 .data_content .data_main .main_center{
-    width: 36%;
+    width: 40%;
     height: 610px;
 
 }
@@ -264,7 +264,7 @@
 }
 
 .data_content .data_main .main_right{
-    width: 38%;
+    width: 34%;
 }
 .data_content .data_main .main_right>div{
     width: 98%;
@@ -472,7 +472,7 @@
 }
  .main_table td{
     color:#fff;
-    font-size: 10px;
+    font-size: 14px;
     text-align: center;
 }
 .main_table tbody tr:nth-child(1),
@@ -552,7 +552,7 @@ li:hover{
 }
 .chart_main{
 	width:100%;
-	height: 350px;
+	height: 280px;
 	margin:10px;
 }
 .img-glz{
@@ -614,4 +614,27 @@ li:hover{
 }
 
 /***车间样式20201209***/
-
+.area_info_div{
+	width:99%;
+}
+.area_info_chart{
+	width:32%;
+	float:left;
+	height:125px;
+}
+.center_chart{
+    width: calc(100% - 10px);
+    height: 310px;
+    margin: 5px;
+    box-sizing: border-box;
+}
+.right_b_chart{
+	width: 98%;
+    height: 310px;
+    margin: 5px;
+    box-sizing: border-box;
+}
+.status_div{
+	height:240px;
+	float:left;
+}
