lst-区域看板参数调整

--- a/src/main/resources/templates/kanban/hl_area.html
+++ b/src/main/resources/templates/kanban/hl_area.html
@@ -401,6 +401,7 @@
 var permList=[[${line}]];
 var woList = [[${WoList}]];
 var KanbanList = [[${KanBanList}]];
-//console.log(KanbanList)
+console.log(permList)
+console.log(woList)
 </script>
 </html>
